Modify module for getting image Change Animation by monthly range

--- a/Visualization.ipynb
+++ b/Visualization.ipynb
@@ -46,7 +46,16 @@
    "outputs": [],
    "source": [
     "dynamic_plot = AnimatedPlot()\n",
-    "HTML(dynamic_plot.subplot().to_jshtml())"
+    "dynamic_plot.subplot()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dynamic_plot.dates"
    ]
   },
   {
