Added more comments

--- a/Image_Processing_Demo.ipynb
+++ b/Image_Processing_Demo.ipynb
@@ -28,6 +28,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "get_image_date_range() function fetches 8 raw images from data source and we will try to extract night time light information from those 8 frame of images"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -60,6 +67,13 @@
    "metadata": {},
    "source": [
     "## Only with Averaging "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First we will try to take the average of all input images to recover regions that are lost in a single image frame"
    ]
   },
   {
@@ -125,6 +139,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Added adaptive filter to suppress noise from averaging"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -174,6 +195,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Different features of images are in different grey levels, we can extract the night flare component and suppress other features such as cloud residual by using intensity level slicing "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Sample cloud pixel intensity as a reference for the cloud feature"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -213,6 +248,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Band Reject filter (smooth but not with high contrast)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Took the shape of intensity slicing transfer function but with curvy transitions "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
@@ -248,7 +297,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Intensity Slicing with Clipping"
+    "## Intensity Slicing (high contrast but has clipping)"
    ]
   },
   {
